[package]
name = "lowbulls"
version = "0.1.13"
edition = "2021"
description = "lowbull is a Rust crate facilitating message handling and event monitoring"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"

[dev-dependencies]
criterion = "0.5.1"
